objects/Product__c.object
<CustomObject>
    <description>To track Products offered to Travel Agencies.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <label>Agency Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_in_Navitaire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created in Navitaire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Add_On_Product__c</fullName>
        <formula>Navitaire_ID__c &lt;&gt;  Account__r.Navitaire_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Add-On Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Navitaire_ID__c</fullName>
        <externalId>true</externalId>
        <label>Navitaire ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.FirstName &amp;&quot; &quot;&amp;  Owner:User.LastName</formula>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN_No__c</fullName>
        <label>PAN No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Navitaire_ID__c</fullName>
        <formula>Account__r.Navitaire_Id__c</formula>
        <label>Parent Navitaire ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Role__c</fullName>
        <label>Product/Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>API Corporate</fullName>
                </value>
                <value>
                    <fullName>CORT</fullName>
                </value>
                <value>
                    <fullName>HOL</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>LTC</fullName>
                </value>
                <value>
                    <fullName>STBF</fullName>
                </value>
                <value>
                    <fullName>TATA</fullName>
                </value>
                <value>
                    <fullName>TCPN</fullName>
                </value>
                <value>
                    <fullName>Web Travel Agent</fullName>
                </value>
                <value>
                    <fullName>APIC</fullName>
                </value>
                <value>
                    <fullName>GRP</fullName>
                </value>
                <value>
                    <fullName>RETAIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AN</fullName>
                </value>
                <value>
                    <fullName>ANI</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>ASM</fullName>
                </value>
                <value>
                    <fullName>BHR</fullName>
                </value>
                <value>
                    <fullName>CHT</fullName>
                </value>
                <value>
                    <fullName>DEL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GJ</fullName>
                </value>
                <value>
                    <fullName>GOA</fullName>
                </value>
                <value>
                    <fullName>GUJ</fullName>
                </value>
                <value>
                    <fullName>HAR</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>HYD</fullName>
                </value>
                <value>
                    <fullName>J&amp;K</fullName>
                </value>
                <value>
                    <fullName>JH</fullName>
                </value>
                <value>
                    <fullName>JHR</fullName>
                </value>
                <value>
                    <fullName>KAR</fullName>
                </value>
                <value>
                    <fullName>KER</fullName>
                </value>
                <value>
                    <fullName>MAH</fullName>
                </value>
                <value>
                    <fullName>MEG</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
                <value>
                    <fullName>ORI</fullName>
                </value>
                <value>
                    <fullName>PUB</fullName>
                </value>
                <value>
                    <fullName>RAJ</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
                <value>
                    <fullName>TRP</fullName>
                </value>
                <value>
                    <fullName>UP</fullName>
                </value>
                <value>
                    <fullName>UTRL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <label>Station</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved by Central Coordinator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Role__c</columns>
        <columns>Account__c</columns>
        <columns>Navitaire_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Central_Sales_Coordinators_Product</fullName>
        <filterScope>Queue</filterScope>
        <label>Central Sales Coordinators</label>
        <queue>Central_Sales_Coordinators</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_for_creation_in_Navitaire</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Product_Role__c</columns>
        <columns>Navitaire_ID__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Created_in_Navitaire__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Pending for creation in Navitaire</label>
    </listViews>
    <listViews>
        <fullName>Transfer_of_Products</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Product_Role__c</columns>
        <columns>Navitaire_ID__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>PAN_No__c</columns>
        <columns>Parent_Navitaire_ID__c</columns>
        <columns>Agency_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner_Name__c</field>
            <operation>equals</operation>
            <value>Pavnish Sharma</value>
        </filters>
        <label>Transfer of Products</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Select_Product_related_to_Corporate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Account__r.RecordType.DeveloperName == &apos;Corporate&apos;,
    AND(
        NOT(ISPICKVAL( Product_Role__c , &apos;RETAIL&apos;)),
        NOT(ISPICKVAL( Product_Role__c , &apos;CORT&apos;)),
        NOT(ISPICKVAL( Product_Role__c , &apos;TATA&apos;)),
        NOT(ISPICKVAL( Product_Role__c , &apos;API Corporate&apos;))
    )
)</errorConditionFormula>
        <errorDisplayField>Product_Role__c</errorDisplayField>
        <errorMessage>Can only select CORT, TATA, API Corporate for Corporate Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Select_Product_related_to_Travel_Agency</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
    Account__r.RecordType.DeveloperName == &apos;Travel_Agency&apos;,
    AND(
        NOT(ISPICKVAL( Product_Role__c , &apos;RETAIL&apos;)),
        NOT(ISPICKVAL( Product_Role__c , &apos;API&apos;)),
        NOT(ISPICKVAL( Product_Role__c , &apos;HOL&apos;)),
        NOT(ISPICKVAL( Product_Role__c , &apos;IBM&apos;)),
        NOT(ISPICKVAL( Product_Role__c , &apos;LTC&apos;)),
        NOT(ISPICKVAL( Product_Role__c , &apos;STBF&apos;)),
        NOT(ISPICKVAL( Product_Role__c , &apos;TCPN&apos;))
    )
)</errorConditionFormula>
        <errorDisplayField>Product_Role__c</errorDisplayField>
        <errorMessage>Can only select API, HOL, IBM, LTC, STBF and TCPN Corporate for Travel Agency</errorMessage>
    </validationRules>
</CustomObject>